--- a/CPP_Module_00/ex01/Makefile
+++ b/CPP_Module_00/ex01/Makefile
@@ -1,7 +1,7 @@
-NAME =	megaphone
+NAME =	phonebook
 FLAGS =	-Wall -Wextra -Werror -std=c++98
 CC =	clang++
-SRCS =	megaphone.cpp
+SRCS =	phonebook.cpp
 OBJS =	$(SRCS:.cpp=.o)
 
 all: $(NAME)
